Create an embed diagram macro #420